<resources>
    <string name="app_name">LikeScanner</string>
    <string name="select_image">IMAGE SCANNER</string>
    <string name="menu_item_settings">Settings</string>


    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_target_resolution" translatable="false">ctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camerax_target_resolution">CameraX target resolution</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>

    <!-- Settings related strings. -->
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection">Pose Detection</string>

    <!-- Strings for object detector enable multiple objects preference. -->
    <string name="pref_title_object_detector_enable_multiple_objects">E     nable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>

    <!-- Strings for object detector enable classification preference. -->
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>

    <!-- Strings for face detector landmark mode preference. -->
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <!-- The following entry values must match the ones in FaceDetectorOptions#LandmarkMode -->
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>

    <!-- Strings for face detector contour mode preference. -->
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <!-- The following entry values must match the ones in FaceDetectorOptions#ContourMode -->
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>

    <!-- Strings for face detector classification mode preference. -->
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <!-- The following entry values must match the ones in FaceDetectorOptions#ClassificationMode -->
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>

    <!-- Strings for face detector performance mode preference. -->
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <!-- The following entry values must match the ones in FaceDetectorOptions#PerformanceMode -->
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Strings for face detector face tracking preference. -->
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>

    <!-- Strings for face detector min face size preference. -->
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>

    <!-- Strings for pose detector performance mode preference. -->
    <string name="pref_title_pose_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate" translatable="false">2</string>

    <!-- Strings for pose detector showInFrameLikelihood preference. -->
    <string name="pref_title_pose_detector_show_in_frame_likelihood">Show in-frame likelihood </string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood" translatable="false">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood" translatable="false">sipdsifl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_height">Height</string>
    <string name="hint_username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="title_activity_maps">Map</string>

    <string name="brower_key">AIzaSyArh_MRtpgLTq5cerArgBSmBdEcXRPxdA8</string>
    <string name="server_client_id">84754159613-7skb0dqgsgb69lgooqhkjc71okh2gmfl.apps.googleusercontent.com</string>

     ///facebook
    <string name="facebook_app_id">145055800832426</string>
    <string name="fb_login_protocol_scheme">fb145055800832426</string>





</resources>