<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.login.SignupActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context="in.insideandroid.template.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="614dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/signup_image_layout"
                    android:layout_width="156dp"
                    android:layout_height="145dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/add_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/text_signup_message"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_person"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_person"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_username"
                            android:imeOptions="actionNext"
                            android:minWidth="320dp"
                            android:minHeight="45dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_signin"
                    style="@style/Button1"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_sign_up" />

                <LinearLayout
                    android:id="@+id/social_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_signup_social_media"
                        android:textColor="@color/md_black_1000"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="8dp"
                            app:srcCompat="@drawable/google" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="8dp"
                            app:srcCompat="@drawable/facebook" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/button_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/text_signup_terms"
                    android:textSize="13sp" />
            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>